--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mxt",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "mountain auto frontend tool",
   "main": "index.js",
   "bin": {
@@ -22,14 +22,14 @@
     "fis-optimizer-png-compressor": "0.1.6",
     "fis-optimizer-uglify-js": "0.1.10",
     "fis-spriter-csssprites": "0.3.11",
-    "maft-command-init": "*",
+    "mxt-command-init": "*",
     "fis3-command-inspect": "1.0.3",
     "fis3-command-release": "1.3.3",
     "fis3-command-server": "0.0.9",
     "fis3-server-node": "0.0.8",
     "fis3-deploy-http-push": "1.0.1",
     "fis3-deploy-encoding": "1.0.0",
-    "fis3-deploy-local-deliver": "1.0.0",
+    "mxt-deploy-local-deliver": "*",
     "fis3-hook-components": "1.0.3",
     "fis3-packager-map": "1.0.9",
     "fis3-errors": "*",
