--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mxt",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "mountain auto frontend tool",
   "main": "index.js",
   "bin": {
@@ -21,7 +21,6 @@
     "fis-optimizer-clean-css": "0.0.9",
     "fis-optimizer-png-compressor": "0.1.6",
     "fis-optimizer-uglify-js": "0.1.10",
-    "fis-spriter-csssprites": "0.3.11",
     "mxt-command-init": "*",
     "fis3-command-inspect": "1.0.3",
     "fis3-command-release": "1.3.3",
@@ -34,7 +33,8 @@
     "fis3-packager-map": "1.0.9",
     "fis3-errors": "*",
     "fis3-hook-relative": "*",
-    "mxt-preprocessor-autoprefixer": "*"
+    "mxt-preprocessor-autoprefixer": "*",
+    "mxt-spriter-csssprites": "*"
   },
   "devDependencies": {
     "chai": "^2.2.0",
