--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mxt",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "mountain auto frontend tool",
   "main": "index.js",
   "bin": {
@@ -21,20 +21,21 @@
     "fis-optimizer-clean-css": "0.0.9",
     "fis-optimizer-png-compressor": "0.1.6",
     "fis-optimizer-uglify-js": "0.1.10",
-    "mxt-command-init": "*",
     "fis3-command-inspect": "1.0.3",
     "fis3-command-release": "1.3.3",
     "fis3-command-server": "0.0.9",
     "fis3-server-node": "0.0.8",
     "fis3-deploy-http-push": "1.0.1",
     "fis3-deploy-encoding": "1.0.0",
-    "mxt-deploy-local-deliver": "*",
     "fis3-hook-components": "1.0.3",
     "fis3-packager-map": "1.0.9",
     "fis3-errors": "*",
     "fis3-hook-relative": "*",
+    "mxt-command-init": "*",
     "mxt-preprocessor-autoprefixer": "*",
-    "mxt-spriter-csssprites": "*"
+    "mxt-spriter-csssprites": "*",
+    "mxt-deploy-local-deliver": "*",
+    "mxt-command-webfont": "*"
   },
   "devDependencies": {
     "chai": "^2.2.0",
